[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/pomodoro/pom_dock.gd" type="Script" id=1]

[node name="Pomodoro" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="PomTimeLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 8.0
margin/right = 163.0
margin/bottom = 22.0
text = "Pomodoro Time (mins):"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PomTimeValue" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 163.0
margin/top = 8.0
margin/right = 203.0
margin/bottom = 22.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ShortTimeLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 38.0
margin/right = 163.0
margin/bottom = 52.0
text = "Short Break Time (mins):"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ShortTimeValue" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 163.0
margin/top = 38.0
margin/right = 203.0
margin/bottom = 52.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LongTimeLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 68.0
margin/right = 163.0
margin/bottom = 82.0
text = "Long Break Time (mins):"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LongTimeValue" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 163.0
margin/top = 68.0
margin/right = 203.0
margin/bottom = 82.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NumberPomsLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 98.0
margin/right = 162.0
margin/bottom = 112.0
text = "Number of Pomodoros:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NumberPomsValue" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 163.0
margin/top = 98.0
margin/right = 203.0
margin/bottom = 112.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PomTimeEdit" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 163.0
margin/top = 3.0
margin/right = 264.0
margin/bottom = 33.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="ShortTimeEdit" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 163.0
margin/top = 33.0
margin/right = 264.0
margin/bottom = 62.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="LongTimeEdit" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 163.0
margin/top = 63.0
margin/right = 264.0
margin/bottom = 92.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="NumberPomsEdit" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 163.0
margin/top = 93.0
margin/right = 264.0
margin/bottom = 121.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="StartButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 128.0
margin/right = 80.0
margin/bottom = 148.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="PauseButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 92.0
margin/top = 128.0
margin/right = 156.0
margin/bottom = 148.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pause"
flat = false

[node name="ResetButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 168.0
margin/top = 128.0
margin/right = 232.0
margin/bottom = 148.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset"
flat = false

[node name="ToolbarSlider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 189.0
margin/right = 267.0
margin/bottom = 205.0
range/min = 0.0
range/max = 100.0
range/step = 0.1
range/page = 0.0
range/value = 30.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Label" type="Label" parent="ToolbarSlider"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = -13.0
margin/right = 150.0
margin/bottom = 1.0
text = "Toolbar Status Location"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PomodoroTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]

[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]

[connection signal="timeout" from="PomodoroTimer" to="." method="_on_PomodoroTimer_timeout"]


